infra/consul/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: consul.home.lab
    external-dns.alpha.kubernetes.io/target: traefik.home.lab
  name: consul
  namespace: infra
spec:
  rules:
  - host: consul.home.lab
    http:
      paths:
      - backend:
          serviceName: consul-consul-ui
          servicePort: 80
        path: /
        pathType: ImplementationSpecific
