infra/consul/ingressroute.yaml
# dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: consul-consul-ui
  namespace: infra
spec:
  routes:
    - match: HostRegexp(`{host:^consul.*}`)
      kind: Rule
      services:
        - name: consul-consul-ui
          kind: Service
          port: 80
          scheme: http
